minor comments and typos

--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -9,11 +9,11 @@ bibliography: references.bib
 
 Phylogenetic comparative methods (PCMs) are commonly used to study the co-evolution of organismal traits, spanning topics such as anatomy and physiology [@garland2005phylogenetic; @oconnor2022immunity; @thayer2018impact; @navalon2019evolutionary; @dunn2015evolutionary], life history and behavior [@maclean2012does; @clayton1994comparative; @salguero2016fast; @bielby2007fast; @cornwallis2017cooperation; @wilkinson2019recurrent], and cultural evolution [@mace2005phylogenetic; @watts2015broad; @navarrete2016coevolution]. "Co-evolution" refers to repeatable patterns of trait co-variation over evolutionary time, across species or across populations. In practice, co-evolution can be investigated using a diverse family of statistical techniques, depending on the research question and type of data available [@harvey1991comparative; @garamszegi2014modern; @nunn2011comparative].
 
-Trait co-evolution simply describes *how* traits change over time. Such descriptions have value for understanding natural history, ancestral state reconstruction (using the present to retrodict the past), and can stimulate new research questions. However, simply inferring that traits changed together in the past does not tell us *why* they changed, or how the traits would respond to intervention. In short, evolutionary correlation does not imply evolutionary causation. Nonetheless, researchers in ecology and evolution are often motivated to study trait co-evolution because they believe these patterns reflect causal relations. While some authors use paradigms such as phylogenetic path analysis to justify their models and make their causal assumptions explicit, many others refrain from stating their assumptions at all, despite drawing implicit causal conclusions. Ambiguity about causal inference can lead to misleading claims and contradictory results, undermining the perceived value and reliability of comparative approaches in biology.
+Trait co-evolution simply describes *how* traits change over time. Such descriptions have value for understanding natural history, ancestral state reconstruction (using the present to retrodict the past), and can stimulate new research questions. However, simply inferring that traits changed together in the past does not tell us *why* they changed, or how the traits would respond to intervention. In short, evolutionary correlation does not imply evolutionary causation. Nonetheless, researchers in ecology and evolution are often motivated to study trait co-evolution because they believe these patterns reflect causal relations [CITATION/EXAMPLE HERE?]. While some authors use paradigms such as phylogenetic path analysis [POINT TO RELEVANT SECTION BELOW?] to justify their models and make their causal assumptions explicit, many others refrain from stating their assumptions at all, despite drawing implicit causal conclusions. Ambiguity about causal inference can lead to misleading claims and contradictory results, undermining the perceived value and reliability of comparative approaches in biology. [I WOULD MAKE THIS PARAGRAPH SLIGHTLY LESS 'OFFENSIVE', BY 1) STATING THAT THESE ISSUES ARE BY NO MEANS LIMITED TO PCM, AND 2) GIVE SOME EXAMPLES OF PCMS  THAT DO OR DO NOT DRAW CAUSAL CONCLUSIONS. OTHERWISE WE RISK UPSETTING READERS WHO EITHER DON'T THINK THIS IS A PROBLEM, OR DON'T LIKE TO BE SINGLED OUT AS PROBLEMATIC - e.g. ISLER & VAN SCHAIK EVO ANTHRO IS A GOOD EXAMPLE OF BEING COGNESCENT OF THE DIFFICULTY OF CAUSAL INFERENCE IN A PGLS/IC WORLD]
 
 A major barrier to incorporating causal inference into study design, analysis, and interpretation is that the causal assumptions baked into popular PCMs are not always apparent to the end users (researchers). For example, the most widely used model of trait evolution in PCMs (Brownian motion) assumes a purely neutral model of evolution with a constant rate of drift over the entire phylogenetic tree. Another example is that, for virtually all models of the co-evolution of continuous traits, effects can only be interpreted causally if we assume that we have the direction of causality right (X -> Y, not Y -> X), and that there is no reciprocal causation. 
 
-In this article, we first review some popular classes of PCM and their assumptions and limitations with respect to causal inference. We then introduce a new method which overcomes some of these limitations and enables the study of directional trait co-evolution for an arbitrary number of traits that can be used with any type of data (continuous, discrete, ordered).
+In this article, we first review some popular classes of PCM and their assumptions and limitations with respect to causal inference. These range from standard regression models that lack clear causal interpretations over phylogenetic path analysis, which makes causal assumptions explicit, to dynamic models that detect temporal contingency (but are limited to binary traits). We then introduce a new dynamic method which overcomes some of these limitations and enables the study of directional trait co-evolution for an arbitrary number of traits that can be used with any type of data (continuous, discrete, ordered).
 
 ## Co-evolution as correlated drift: the evolutionary regression coefficient
 
@@ -33,17 +33,17 @@ Expressed as discrete time difference equations:
 
 $$ \Delta x_t =  \epsilon_{x,t}$$
 $$ \Delta y_t = b\epsilon_{x,t} + \epsilon_{y,t}$$
-This model assumes that all change in trait $X$ is due to random drift $\epsilon_x$. Likewise, change in trait $Y$ is due to independent drift $\epsilon_y$ and response to *changes* in $X$. There is no directional change over time, and the evolution of both traits is state-independent (i.e., $Y$ has an invariant response to drift in $X$, regardless of how high or low it is). We can relax some assumptions, such as constant $\sigma$ and $\b$ over time, and still get unbiased estimates of $b$ using a cross-sectional regression of species. Additionally, if $Y$ has a non-linear response to $\epsilon_x$, then $b$ will still be a valid estimate of the linear component--albeit now possibly misleading if the total response exhibits strong non-linearity. But if either trait is under selection (i.e., the edges between $Y_t$ and $Y_{t+1}$ or between $X_t$ and $X_{t+1}$ aren't = 1), then then regression coefficient will no longer be equal to b. To get a sense for why, imagine that, in addition to drift, $X$ is under moderate stabilizing selection. This means that $X_t$ is no longer just a record of the additive evolutionary history of $\epsilon_x$, and that a causal effect of $X$ on $Y$ is not evident from the trait covariance at the tips of a phylogeny. Just because you can't see it anymore, doesn't mean it isn't important.
+This model assumes that all change in trait $X$ is due to random drift $\epsilon_x$. Likewise, change in trait $Y$ is due to independent drift $\epsilon_y$ and response to *changes* in $X$. There is no directional change over time, and the evolution of both traits is state-independent (i.e., $Y$ has an invariant response to drift in $X$, regardless of how high or low it is). We can relax some assumptions, such as constant $\sigma$ and $\b$ over time, and still get unbiased estimates of $b$ using a cross-sectional regression of species. Additionally, if $Y$ has a non-linear response to $\epsilon_x$, then $b$ will still be a valid estimate of the linear component--albeit now possibly misleading if the total response exhibits strong non-linearity. But if either trait is under selection (i.e., the edges between $Y_t$ and $Y_{t+1}$ or between $X_t$ and $X_{t+1}$ aren't = 1), then the regression coefficient will no longer be equal to b. To get a sense for why, imagine that, in addition to drift, $X$ is under moderate stabilizing selection. This means that $X_t$ is no longer just a record of the additive evolutionary history of $\epsilon_x$, and that a causal effect of $X$ on $Y$ is not evident from the trait covariance at the tips of a phylogeny. Just because you can't see it anymore, doesn't mean it isn't important.
 
 ![Figure 1](figures/MA_DAG.png){width=60%}
 
 We previously stated that a cross section of current species trait values can provide an unbiased estimate of the change in trait $Y$ in response to changes in $X$. This fact is well known in the comparative literature [@pagel1993seeking; @rohle2006comment], and consistent with the rules of do-calculus--given the strict assumptions of the model outined before. However, if traits were correlated in the past but no longer exhibit any association, then evolutionary history is a confounder. For example, in Figure 4B, $U_0$ creates a "backdoor path" that connects all pairs of $X_t$ and $Y_t$.
 
-Phylogentic position is just a type of clustering, and the presence of clusters (such as a clade) in comparative datasets makes analyses more susceptible to Simpson's paradox, a reversal of trend at group (clade) vs individual (species) level. Statistical adjustment for phylogeny helps reduce both the type I (false-positive) and type II (false-negative) error rates (plus the Type M and Type S errors). It should be noted here that "adjusting for phylogeny" is not a magic-fix for unobserved confounding that is persistent throughout the phylogenetic tree. But it can help us adjust for confounding in the past.
+Phylogentic position is just a type of clustering, and the presence of clusters (such as a clade) in comparative datasets makes analyses more susceptible to Simpson's paradox, a reversal of a trend at the group level (clade) vs the individual level (species). Statistical adjustment for phylogeny helps reduce both the type I (false-positive) and type II (false-negative) error rates (plus the Type M and Type S errors [ADD CITATION FOR WHAT THESE ARE]). It should be noted here that "adjusting for phylogeny" is not a magic-fix for unobserved confounding that is persistent throughout the phylogenetic tree. But it can help us adjust for confounding in the past.
 
 HOW CAN WE TELL IF ITS PHYLOGENETIC CONFOUNDING VS A CAUSAL RELATIONSHIP? IN THE FORMER, THE COVARIANCE BETWEEN X AND Y WILL DECREASE OVER TIME. IN THE LATTER IT IS CONSTANT/STABLE.
 
-Additionally, even if there was zero structural phylogenetic confounding, it would still be a good idea in any finite sample to adjust for phylogeny because, as a source of variation in $Y$, phlyogeny is a "good control" in that it helps us isolate variation in $Y$ that is due to possible causal effects of $X$. Marginalizing over phylogenetic position can also give us imrpoved estimtes of the average effects when clades are unequally sampled.
+Additionally, even if there was zero structural phylogenetic confounding, it would still be a good idea in any finite sample to adjust for phylogeny because, as a source of variation in $Y$, phlyogeny is a "good control" in that it helps us isolate variation in $Y$ that is due to possible causal effects of $X$. Marginalizing over phylogenetic position can also give us improved estimates of the average effects when clades are unequally sampled. 
 
 
 This model assumes that trait co-evolution is *ergodic*, which means that the time average of the co-evolutionary process is equal to the ensemble average. In other words, a cross-section contains the same information as a time series. Remarkably, this means that even a simple species regression (i.e., regression of $Y$ on $X$, with no phylogenetic information considered) provides an unbiased estimate of $b$.
