--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -19,7 +19,7 @@ In this article, we first review some popular classes of PCM and their assumptio
 
 The most common way to quantify co-evolution between traits is the evolutionary regression coefficient [@pagel1993seeking]. The evolutionary regression coefficient is a measure of association between traits over evolutionary time, $b = \frac{\sigma(X,Y)}{\sigma^2(X)}$. It can be interpreted as "a one unit increase in trait $X$ is associated with a $b$ unit change in trait $Y$." When can we interpret these statistics as causal effects? The short answer is...almost never! To explain why, we sketch out assumptions needed to map an evolutionary regression coefficient onto a causal estimand.
 
-First, what do we mean by causal? Following Pearl (some citations), we say that $X$ is a cause of $Y$ when $P(Y|do(X = x)) \neq P(Y|do(X = \textrm{not x}))$. The do($\dot$) operator represents an *intervention* in which the value of some variable is fixed (for example, through assignment in a randomized experiment). This is an inclusive definition, where if the probability distribution $P(Y)$ is sensitive to the value of $X$ that is assigned, then $X$ has a causal effect on $Y$. Note here that $X$ refers to a random variable while $x$ refers to some realized unit value of that variable. In any observational study, we cannot directly access $P(Y|do(X = x))$. Instead, we have just have the condition probability of $Y$ given $X$, $P(Y|X)$. Pearl and colleagues' "do calculus" is a set of rules that tells us under what conditions $P(Y|do(X)) = P(Y|X)$, or when we can make them equivalent by adjustment for other variables $P(Y|do(X),Z) = P(Y|X,Z)$. An *estimand* is a unit specific estimate such as "what would we expect species $i$ trait value $y_i$ to be if $x_i$ took on a given value?". Under a particular set of causal and parameteric assumptions, a regression coefficient $b$ can be interpeted as the estimand "what is the difference in the expected (mean) value of $Y$ if $x = 1$ vs $x = 0~$?", or $E[Y|x=1] - E[Y|x=0]$.
+First, what do we mean by causal? Following Pearl (some citations), we say that $X$ is a cause of $Y$ when $P(Y|do(X = x)) \neq P(Y|do(X = \textrm{not x}))$. The do($\cdot$) operator represents an *intervention* in which the value of some variable is fixed (for example, through assignment in a randomized experiment). This is an inclusive definition, where if the probability distribution $P(Y)$ is sensitive to the value of $X$ that is assigned, then $X$ has a causal effect on $Y$. Note here that $X$ refers to a random variable while $x$ refers to some realized unit value of that variable. In any observational study, we cannot directly access $P(Y|do(X = x))$. Instead, we have just have the condition probability of $Y$ given $X$, $P(Y|X)$. Pearl and colleagues' "do calculus" is a set of rules that tells us under what conditions $P(Y|do(X)) = P(Y|X)$, or when we can make them equivalent by adjustment for other variables $P(Y|do(X),Z) = P(Y|X,Z)$. An *estimand* is a unit specific estimate such as "what would we expect species $i$ trait value $y_i$ to be if $x_i$ took on a given value?". Under a particular set of causal and parameteric assumptions, a regression coefficient $b$ can be interpeted as the estimand "what is the difference in the expected (mean) value of $Y$ if $x = 1$ vs $x = 0~$?", or $\mathbb{E}[Y|x=1] - \mathbb{E}[Y|x=0]$.
 
 An unitiuitive aspect of phylogenetic comparative methods is that cross-sections of species traits are used as an estimate of the *change* in $Y$ in response $X$. After all, we have only observed current trait values, not their evolution over time. It is unituitive not because it is incorrect in principle, but because it requires the reseracher to make a series of strong assumptions that may be in conflict with the stated research question. Following [@pagel1993seeking], we define a causal model of trait co-evolution in which we would be justified in interpreting the evolutionary regression coefficient as a causal effect. The model is defined below and depicted graphically in Figure 1.
 
@@ -37,35 +37,15 @@ This model assumes that all change in trait $X$ is due to random drift $\epsilon
 
 ![Figure 1](figures/MA_DAG.png){width=60%}
 
-We previously stated that a cross section of current species trait values can provide an unbiased estimate of the change in trait $Y$ in response to changes in $X$. This fact is well known in the comparative literature [@pagel1993seeking; @rohle2006comment], and consistent with the rules of do-calculus--given the strict assumptions of the model outined before. However, if traits were correlated in the past but no longer exhibit any association, then evolutionary history is a confounder. For example, in Figure 4B, $U_0$ creates a "backdoor path" that connects all pairs of $X_t$ and $Y_t$.
+We previously stated that a cross section of current species trait values can provide an unbiased estimate of the change in trait $Y$ in response to changes in $X$. This fact is well known in the comparative literature [@pagel1993seeking; @rohle2006comment], and consistent with the rules of do-calculus--given the strict assumptions of the model outlined before. However, if traits were correlated in the past but no longer exhibit any association, then evolutionary history acts as a confounder. For example, in Figure 4B, $U_0$ creates a "backdoor path" that connects all pairs of $X_t$ and $Y_t$. This means that $P(Y|do(X)) \neq P(Y|X)$, unless we can somehow adjust for $U_0$.
+
+The confounder denoted $U$ is unobserved, meaning that we can't statistically adjust for it. However, note that for any time $t$, $X_t$ and $Y_t$ are independent of $U_0$ conditional on $\{ X_{t-1},X_{t-1}$. In other words, the present is conditionally independent of $U_0$ (or "d-seperated") given the past. But in most comparative studies, we have not observed the past, only the present. This is where phylogeny can help us, because more closely related species or populations have more similar confounding factors (e.g., shared genetic architecture, environmental similarity), on average, than distantly related ones. Assuming that we have an appropriate model of evolution, then the patristic distance between species (i.e., time since divergence from a common ancestor) allows us to probabalistically reconstruct unobserved past values of $X$ and $Y$, closing the backdoor path $X \leftarrow U \rightarrow Y$ (cite Rethinking 2nd edition). It should be noted that such a scenario is sometimes called "phylogenetic confounding," but...[DOESN"T WORK IF U IS STILL PRESENT AT THE TIPS. HOW CAN WE TELL IF ITS PHYLOGENETIC CONFOUNDING VS A CAUSAL RELATIONSHIP? IN THE FORMER, THE COVARIANCE BETWEEN X AND Y WILL DECREASE OVER TIME. IN THE LATTER IT IS CONSTANT/STABLE].
 
 Phylogentic position is just a type of clustering, and the presence of clusters (such as a clade) in comparative datasets makes analyses more susceptible to Simpson's paradox, a reversal of a trend at the group level (clade) vs the individual level (species). Statistical adjustment for phylogeny helps reduce both the type I (false-positive) and type II (false-negative) error rates (plus the Type M and Type S errors [ADD CITATION FOR WHAT THESE ARE]). It should be noted here that "adjusting for phylogeny" is not a magic-fix for unobserved confounding that is persistent throughout the phylogenetic tree. But it can help us adjust for confounding in the past.
 
-HOW CAN WE TELL IF ITS PHYLOGENETIC CONFOUNDING VS A CAUSAL RELATIONSHIP? IN THE FORMER, THE COVARIANCE BETWEEN X AND Y WILL DECREASE OVER TIME. IN THE LATTER IT IS CONSTANT/STABLE.
+Additionally, even if there was zero structural phylogenetic confounding (Figure 1A), it would still be a good idea in any finite sample to adjust for phylogeny because, as a source of variation in $Y$, phlyogeny is a "good control" in that it helps us isolate variation in $Y$ that is due to possible causal effects of $X$. Marginalizing over phylogenetic position can also give us improved estimates of the average effects when clades are unequally sampled. 
 
-Additionally, even if there was zero structural phylogenetic confounding, it would still be a good idea in any finite sample to adjust for phylogeny because, as a source of variation in $Y$, phlyogeny is a "good control" in that it helps us isolate variation in $Y$ that is due to possible causal effects of $X$. Marginalizing over phylogenetic position can also give us improved estimates of the average effects when clades are unequally sampled. 
-
-
-This model assumes that trait co-evolution is *ergodic*, which means that the time average of the co-evolutionary process is equal to the ensemble average. In other words, a cross-section contains the same information as a time series. Remarkably, this means that even a simple species regression (i.e., regression of $Y$ on $X$, with no phylogenetic information considered) provides an unbiased estimate of $b$.
-
-An OU model where the response is undergoing adaptive evolution and the predictor is drifting also works. But if the predictor is under selection, things get messed up.
-
-
-
-Why would we care about the phylogenetic correlation? Because this is an indicator that the traits co-evolve across the phylogenetic tree rather than just at the tips.
-
-
-OU ADAPATIVE EVOLUTION AREN'T JUST A FIX FOR VIOLATION OF BROWNIAN MOTION--THEY IMPLY AN ENTIRELY DIFFERENT THEORETICAL ESTIMAND! Difference in Y given difference in X vs difference in the equilibrium trait value of Y given X. In the latter, the mean is not ergodic?
-
-STATE DEPENDENT ANALYSES MAKE US MORE SUSCEPTIBLE TO DARWIN'S SCENARIO -- UNREPLICATED BURSTS. REMOVAL OF PHYLOGENETIC CONFOUNDING RELIES ON THE COVARIANCE BETWEEN X AND Y DECREASING OVER TIME. IF THEY ARE MAINTAINED BY SELECTION WITHIN A CLADE, WE MAY FOOL OURSELVES. (!!!). SOLUTION = CLADE SPECIFIC RANDOM EFFECTS.
-
-## Causality on Phylogenetic Trees
-
-TEST YOUR METHOD AGAINST MODEL MISSPECIFICATION--WHAT IF DATA WERE GENERATED UNDER CORRELATED DRIFT? AFTER CLARIFYING HOW THESE ARE FUNDAMENTALLY DIFFERENT QUESTIONS/ESTIMANDS, IMPORTANT TO SHOW HOW THEY INFUENCE EACH OTHERS ESTIMATES IF WE IGNORE THEM. MY INTUITION = IGNORING SELECTION LEADS TO BIAS, IGNORING DRIFT DOES NOT.
-
-
-![Figure 1](figures/phylo_DAG.png)
-
+Now that we have a sense for the assumed causal model underlying most phylogenetic comparative analyses, and motivation for why we statistically adjust for phylogeny, let's review some popular methods for estimating the evolutionary regression coefficient and introduce some variations on the causal model in Figure 1.
 
 ### Phylogenetic Generalized Least Squares (PGLS)
 
@@ -103,11 +83,13 @@ $$ \boldsymbol{V_s} = \sigma^2 \begin{bmatrix}
 
 This scaling is often referred to as a "branch length transformation," because shrinking the off-diagonals (shared evolutionary history) while holding the diagonals constant (independent evolution) is equivalent to "stretching" the terminal branches leading to the tips and "shrinking" the past co-evolutionary branches. $\lambda = 1$ indicates that the phylogenetic strength is as strong as expected under a Brownian motion model, while lower values means that a lower proportion of the trait variance can be attributed to shared evolutionary history. At the extreme of $\lambda = 0$, $\boldsymbol{V}_s$ becomes an identity matrix and PGLS reduces to standard least squares regression.
 
-Brownian motion is the simplest and most widely used model, and often interpreted as "drift" across the phylogenetic tree. Other popular choices include Ornstein-Uhlenbeck, where change is due to both random drift and "stabilizing selection" around some optimal trait value, as well as Early Burst models of adaptive radiation where the rate of change ($\sigma$) decreases over time. In general, $\boldsymbol{V}$ is constructed by inputting a matrix of phylogenetic distances to some covariance function $C(x,x')$ such that $V_{[j,k]} = C(j,k)$.
+Brownian motion is the simplest and most widely used model, and often interpreted as "drift" across the phylogenetic tree. Other popular choices include Ornstein-Uhlenbeck, where change is due to both random drift and "stabilizing selection" around some optimal trait value, as well as Early Burst models of adaptive radiation where the rate of change ($\sigma$) decreases over time. NOTE ON OU COVARIANCE: An OU model where the response is undergoing adaptive evolution and the predictor is drifting also works. But if the predictor is under selection, things get messed up. In general, $\boldsymbol{V}$ is constructed by inputting a matrix of phylogenetic distances to some covariance function $C(x,x')$ such that $V_{[j,k]} = C(j,k)$.
 
 Although PGLS is widely used in comparative biology, it has several key limitations. These include the assumption of Gaussian errors, proneness to overfitting due to a lack of parameter regularization, and failure to accommodate many common data structures such as repeated measures of species trait values, missing data, and measurement error. In the next section we review more flexible regression approaches, as well as an important alternative method of estimating evolutionary associations.
 
 ### Phylogenetic Generalized Multilevel Models
+
+Why would we care about the phylogenetic correlation? Because this is an indicator that the traits co-evolve across the phylogenetic tree rather than just at the tips.
 
 Phylogenetic generalized multilevel (or mixed-effects) models (PGLMMs) extend the study of trait coevolution by leveraging analytic strategies developed in quantitative genetics to accommodate more complex, multivariate model designs with non-Gaussian outcomes [@lynch1991methods; @hadfield2010general; @ives2010phylogenetic; @ives2011generalized]. Rather than explicitly scaling the off-diagonals of $\boldsymbol{V}_s$ with some parameter $\lambda$, phylogenetic signal is quantified as the ratio of the variance of phylogenetic random effects $\nu$ (also called 'mixed' or 'varying' effects) to total trait variance. For example, an observation of a Gaussian trait $Y$ from a species or population $j$ and predictor $X$ is modeled as:
 
@@ -117,7 +99,7 @@ Where $\boldsymbol{I}$ is an identity matrix and thus the residuals $\epsilon$ a
 
 In this model, $\beta_{x(\textrm{PGLMM})}$ has the same interpretation as $\beta_{x(\textrm{PGLS})}$. If the response was non-Gaussian, $\beta_{x(\textrm{PGLS})}$ has the same interpretation *on the latent scale*. Conversion of the phylogenetic regression coefficient $\beta_{x(\textrm{PGLMM})}$ to the observation scale requires inverting the link function, and will be sensitive to other model parameters.
 
-#### Multivariate PGLMMs
+### Mutli-response PGLMMs: contrasting macro and microevolution
 
 Residual and phylogenetic correlations can be different! Why? Plasticity and/or microevolutionary response to X may not be the same as the macroevolutionary process, a violation of *ergodicity*. or correlated measurement error.
 
@@ -126,7 +108,20 @@ PHYLOGENETIC CORRELATION DIRECTLY RELATED TO evolutionary regression coefficient
 $$ \rho(X,Y) = \frac{\sigma(X,Y)}{\sigma(x)\sigma(Y)} $$
 $$ b = \rho(X,Y)\frac{\sigma(Y)}{\sigma(X)} $$
 
-#### Phylogenetic Path Analysis & Causal Inference
+
+### Misc. Notes
+
+OU ADAPATIVE EVOLUTION AREN'T JUST A FIX FOR VIOLATION OF BROWNIAN MOTION--THEY IMPLY AN ENTIRELY DIFFERENT THEORETICAL ESTIMAND! Difference in Y given difference in X vs difference in the equilibrium trait value of Y given X. In the latter, the mean is not ergodic?
+
+OU BUTLER AND KING ALGO--PIECEWISE CONSTANT SELECTION REGIME. I THINK THIS MEANS THAT Y RESPONDS TO WHATEVER TRIAT VALUE X WAS AT THE START OF THE SEGMENT--DOESN'T RESPOND TO CHANGES IN X WITHIN THE SEG.
+
+STATE DEPENDENT ANALYSES MAKE US MORE SUSCEPTIBLE TO DARWIN'S SCENARIO -- UNREPLICATED BURSTS. REMOVAL OF PHYLOGENETIC CONFOUNDING RELIES ON THE COVARIANCE BETWEEN X AND Y DECREASING OVER TIME. IF THEY ARE MAINTAINED BY SELECTION WITHIN A CLADE, WE MAY FOOL OURSELVES. (!!!). SOLUTION = CLADE SPECIFIC RANDOM EFFECTS.
+
+TEST YOUR METHOD AGAINST MODEL MISSPECIFICATION--WHAT IF DATA WERE GENERATED UNDER CORRELATED DRIFT? AFTER CLARIFYING HOW THESE ARE FUNDAMENTALLY DIFFERENT QUESTIONS/ESTIMANDS, IMPORTANT TO SHOW HOW THEY INFUENCE EACH OTHERS ESTIMATES IF WE IGNORE THEM. MY INTUITION = IGNORING SELECTION LEADS TO BIAS, IGNORING DRIFT DOES NOT.
+
+
+![Figure 1](figures/phylo_DAG.png)
+### Phylogenetic Path Analysis
 
 While the terminology is not always consistent in the literature, note that "phylogenetic correlation" refers to a . A residual correlation refers to the remaining trait covariance *after* accounting for similarity due to shared evolutionary history. The residual correlations derived from PCMs are often interpreted as evidence for convergent evolution, adjusted for statistical non-independence and confounding due to phylogeny.
 
@@ -134,7 +129,7 @@ Independent contrasts, PGLS, PGLMMs, PPA
 
 Discrete data can be modeled in the GLMMM framework if we conceptualize discrete phenotypes (binary, ordinal, categorical) as manifestations of a latent continuous trait, as in the quantitative genetic threshold model [@wright1934; @felsenstein2005using].
 
-## "Dynamic" PCMs
+## Dynamic state-space models of co-evolution
 
 Pagel's discrete, Hidden Markov Models, Butler & King OU
 
