--- a/references.bib
+++ b/references.bib
@@ -20,12 +20,53 @@
   publisher={Nature Publishing Group}
 }
 
+@article{revell2021variable,
+  title={A variable-rate quantitative trait evolution model using penalized-likelihood},
+  author={Revell, Liam J},
+  journal={PeerJ},
+  volume={9},
+  pages={e11997},
+  year={2021},
+  publisher={PeerJ Inc.}
+}
+
 @article{oconnor2022immunity,
   title={Immunity and lifespan: answering long-standing questions with comparative genomics},
   author={O’Connor, Emily A and Cornwallis, Charlie K},
   journal={Trends in Genetics},
   year={2022},
   publisher={Elsevier}
+}
+
+@article{jaeggi2020variable,
+  title={Variable social organization is ubiquitous in Artiodactyla and probably evolved from pair-living ancestors},
+  author={Jaeggi, AV and Miles, MI and Festa-Bianchet, M and Schradin, C and Hayes, LD},
+  journal={Proceedings of the Royal Society B},
+  volume={287},
+  number={1926},
+  pages={20200035},
+  year={2020},
+  publisher={The Royal Society}
+}
+
+@article{harmon2005effect,
+  title={The effect of intraspecific sample size on type I and type II error rates in comparative studies},
+  author={Harmon, Luke J and Losos, Jonathan B},
+  journal={Evolution},
+  volume={59},
+  number={12},
+  pages={2705--2710},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{garamszegi2014uncertainties,
+  title={Uncertainties due to within-species variation in comparative studies: measurement errors and statistical weights},
+  author={Garamszegi, L{\'a}szl{\'o} Zsolt},
+  journal={Modern phylogenetic comparative methods and their application in evolutionary biology},
+  pages={157--199},
+  year={2014},
+  publisher={Springer}
 }
 
 @article{lynch1991methods,
@@ -400,6 +441,15 @@
   pages={506},
   year={1934},
   publisher={Oxford University Press}
+}
+
+@article{cinelli2021crash,
+  title={A crash course in good and bad controls},
+  author={Cinelli, Carlos and Forney, Andrew and Pearl, Judea},
+  journal={Sociological Methods \& Research},
+  pages={00491241221099552},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
 @article{pagel1993seeking,
